--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,6 +8,7 @@ authors = ["ninja1167 <<>>"]
 python = "^3.8"
 Flask = "^2.0.2"
 discord = "^1.7.3"
+PyNaCl = "^1.5.0"
 
 [tool.poetry.dev-dependencies]
 
